--- a/osa4/package.json
+++ b/osa4/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "watch": "nodemon index.js",
-    "test": "vsauce group dynamics"
+    "start": "cross-env NODE_ENV=production node index.js",
+    "watch": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env NODE_ENV=test jest --verbose"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +17,11 @@
     "mongoose": "^5.4.11"
   },
   "devDependencies": {
+    "cross-env": "^5.2.0",
     "jest": "^24.1.0",
     "nodemon": "^1.18.10"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
