--- a/osa4/package.json
+++ b/osa4/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node index.js",
-    "watch": "cross-env NODE_ENV=development nodemon index.js",
-    "test": "cross-env NODE_ENV=test jest --verbose"
+    "start": "node index.js",
+    "watch": "nodemon index.js",
+    "test": "NODE_ENV=test jest --verbose"
   },
   "author": "",
   "license": "ISC",
@@ -17,9 +17,9 @@
     "mongoose": "^5.4.11"
   },
   "devDependencies": {
-    "cross-env": "^5.2.0",
     "jest": "^24.1.0",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "supertest": "^3.4.2"
   },
   "jest": {
     "testEnvironment": "node"
