--- a/osa7/routed-anecdotes/package.json
+++ b/osa7/routed-anecdotes/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "dependencies": {
     "npm": "^6.9.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.2",
+    "react-alert": "^5.2.0",
+    "react-alert-template-basic": "^1.0.0",
     "react-dom": "^16.8.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
+    "react-transition-group": "^2.6.0",
     "start": "^5.1.0"
   },
   "scripts": {
